--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,24 @@
 spring:
+  config:
+    import: optional:file:.env[.properties]
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            scope: profile, email
   datasource:
     url: ${DB_URL}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
+  jwt:
+    secret: ${JWT_SECRET}
+    access-exp: 1m
+    refresh-exp: 14d
+
+client:
+  url: http://localhost:3000
+
+logging.level.org.springframework.security.web.FilterChainProxy: DEBUG
