chore: remove jackson module

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ kotlinx-serialization = "1.9.0"
 spring-boot = "3.5.3"
 junit-platform-launcher = "1.13.3"
 exposed = "1.0.0-beta-3"
-jackson-module-kotlin = "2.19.0"
+#jackson-module-kotlin = "2.19.0"
 h2 = "2.3.232"
 
 [libraries]
@@ -18,7 +18,7 @@ junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher
 exposed-spring-boot-starter = { module = "org.jetbrains.exposed:exposed-spring-boot-starter", version.ref = "exposed" }
 exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed" }
 exposed-json = { module = "org.jetbrains.exposed:exposed-json", version.ref = "exposed" }
-jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson-module-kotlin" }
+#jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson-module-kotlin" }
 h2 = { module = "com.h2database:h2", version.ref = "h2" }
 
 [plugins]
