--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,35 @@
 spring:
+  config:
+    import: optional:file:.env[.properties]
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            scope: email, profile
   datasource:
     url: ${DB_URL}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
+  jwt:
+    secret: ${JWT_SECRET}
+    access-exp: 1m
+    refresh-exp: 14d
+
+client:
+  url: http://localhost:3000
+
+logging.level.org.springframework.security.web.FilterChainProxy: DEBUG
+logging:
+  level:
+    org.springframework.security.oauth2.client.web.OAuth2LoginAuthenticationFilter: DEBUG
+    org.springframework.security.oauth2.client.web.HttpSessionOAuth2AuthorizationRequestRepository: DEBUG
+    org:
+      springframework:
+        security:
+          oauth2:
+            client:
+              web: DEBUG
